--- a/demo/arm/mofei.html
+++ b/demo/arm/mofei.html
@@ -14,7 +14,7 @@
 
 	<body>
 		<div class="hotBj">
-			北京 - 热门迁入路线TOP10
+			<span>北京</span> - 热门<span>迁入</span>路线TOP10
 			<br>
 			(2015-02-24)
 		</div>
@@ -30,7 +30,7 @@
 		<div id="earth">
 			
 		</div>
-		
+
 		<script type="x-shader/x-vertex" id="vertexshader">
 			uniform float amplitude;
 			attribute float size;
