--- a/demo/arm/mofei.html
+++ b/demo/arm/mofei.html
@@ -16,7 +16,7 @@
 		<div class="hotBj">
 			<span>北京</span> - 热门<span>迁入</span>路线TOP10
 			<br>
-			(2015-02-24)
+			<span>(2015-02-24)</span>
 		</div>
 		<div class="pan">
 			<div class="panNav">
