--- a/demo/arm/mofei.html
+++ b/demo/arm/mofei.html
@@ -18,12 +18,15 @@
 			<br>
 			<span>(2015-02-24)</span>
 		</div>
+		<div class="panSearch">
+				<input type="text" placeholder="输入城市名称，按回车搜索">
+			</div>
 		<div class="pan">
+			
 			<div class="panNav">
 				<a href="#" class="active">迁入</a>
 				<a href="#">迁出</a>
 			</div>
-			
 			<div class="showArae"></div>
 		</div>
 
