--- a/demo/arm/mofei.html
+++ b/demo/arm/mofei.html
@@ -13,6 +13,11 @@
 	</head>
 
 	<body>
+		<div class="loading">
+			<div class="loadingText">加载资源中，请稍后...</div>
+			<div class="loadingSubText">加载资源中，请稍后...</div>
+			<div class="loadingProgress"></div>
+		</div>
 		<div class="hotBj">
 			<span>北京</span> - 热门<span>迁入</span>路线TOP10
 			<br>
