--- a/demo/arm/mofei.html
+++ b/demo/arm/mofei.html
@@ -39,6 +39,16 @@
 			
 		</div>
 
+		<div class="bottomTips">
+			使用说明：
+			<br>
+			1.您可以在搜索框内输入城市名称，点击回车查看输入的城市。
+			<br>
+			2.您可以在排名列表中点击城市名称，来查看点击的城市。
+			<br>
+			3.您可以用鼠标拖拽地球，来移动地球。
+		</div>
+
 		<script type="x-shader/x-vertex" id="vertexshader">
 			uniform float amplitude;
 			attribute float size;
