--- a/demo/oneone/mofei.html
+++ b/demo/oneone/mofei.html
@@ -20,9 +20,17 @@
 		</div>
 
 		<div class="cover">
-			<div class="line-1"></div>
-			<div class="line-2"></div>
-			<div class="title">一带一路</div>
+			<div class="title">
+				<div class="">	
+					一带一路
+				</div>
+				<div class="subtitle">
+					<div>建设丝绸之路经济带，</div>
+					<div>建设21世纪海上丝绸之路经济带</div>
+					<div style="text-align:right">--习近平</div>
+				</div>
+			</div>
+
 			<div class="tips">一带一路 (C) Baidu.com</div>
 		</div>
 		<!-- <div class="hotBj">
@@ -43,6 +51,9 @@
 		</div> -->
 
 		<div id="earth">
+			
+		</div>
+		<div id="earthShadow">
 			
 		</div>
 
@@ -111,7 +122,7 @@
 				vec4 lookupColor = texture2D( lookup, lookupUV );
 				float mask = lookupColor.x + ( 1.0 - outlineLevel ) * indexedColor;
 				mask = clamp(mask,0.0,1.0);
-				float outlineColor = texture2D( outline, vUv ).x * outlineLevel;
+				float outlineColor = texture2D( outline, vUv ).x * outlineLevel * 0.4;
 				float diffuse = mask + outlineColor;
 				vec4 img = texture2D( blendImage, vUv ) * outlineLevel * 0.5;
 				gl_FragColor = diffuse+img;
